@@ -1,6 +1,6 @@
 Summary: This package contains the pbs python module.
 Name: pbs_python
-Version: 2.7.10 
+Version: 2.8.1 
 Release: 1
 Copyright: See LICENSE
 Group: Development/Libraries
@@ -9,9 +9,6 @@ BuildRoot: /var/tmp/%{name}-buildroot
 
 %description
 This package contains the pbs python module.
-
-%prep
-%setup -q
 
 %build
 python setup.py build
@@ -23,9 +20,11 @@ python ./setup.py install --prefix $RPM_BUILD_ROOT/usr ;
 rm -rf $RPM_BUILD_ROOT
 
 %files
-%defattr(-,root,root)
+%defattr(-,root,root,0755)
 %doc README TODO examples
 
+/usr/lib/python2.2/site-packages
+/usr/lib/python2.2/site-packages/pbs
 /usr/lib/python2.2/site-packages/pbs/pbs.py
 /usr/lib/python2.2/site-packages/pbs/PBSQuery.py
 /usr/lib/python2.2/site-packages/pbs/_pbs.so
@@ -34,5 +33,8 @@ rm -rf $RPM_BUILD_ROOT
 /usr/lib/python2.2/site-packages/pbs.pth
 
 %changelog
+* Tue Nov 22 2005 Martin Pels <pels@sara.nl>
+- Changed default directory permissions
 * Tue Nov 01 2005 Martin Pels <pels@sara.nl> 
 - Initial version
+
